Name:                acid-state-tls
Version:             0.9.0
Synopsis:            Add ACID guarantees to any serializable Haskell data structure.
Description:         Use regular Haskell data structures as your database and get stronger ACID guarantees than most RDBMS offer.
Homepage:            http://acid-state.seize.it/
License:             PublicDomain
Author:              David Himmelstrup, Jeremy Shaw
Maintainer:          Lemmih <lemmih@gmail.com>
-- Copyright:
Category:            Database
Build-type:          Simple
Cabal-version:       >=1.6
Extra-source-files:
        examples/*.hs
        examples/ssl/test.*

Source-repository head
  type:          darcs
  location:      http://hub.darcs.net/Lemmih/acid-state-tls

Library
  Hs-Source-Dirs:      src

  Exposed-Modules:     Data.Acid.Remote.TLS

  Build-depends:       acid-state >= 0.9 && < 0.10,
                       base >= 4 && < 5,
                       directory,
                       HsOpenSSL,
                       network,
                       safecopy >= 0.6

  GHC-Options:         -fwarn-unused-imports -fwarn-unused-binds
